Documented more endpoints
